add websocket listener config (plain and ssl) (#342)
* add websocket listener config (plain and ssl)

* add websocket listener config (plain and ssl)

* fix syntax

* upversion to 2.0

* introduce changelog for v2.0

* Update Dockerfile

--- a/mosquitto/config.json
+++ b/mosquitto/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Mosquitto broker",
-  "version": "1.0",
+  "version": "2.0",
   "slug": "mosquitto",
   "description": "An Open Source MQTT broker",
   "url": "https://home-assistant.io/addons/mosquitto/",
@@ -8,12 +8,16 @@
   "boot": "auto",
   "ports": {
     "1883/tcp": 1883,
-    "8883/tcp": 8883
+    "1884/tcp": 1884,
+    "8883/tcp": 8883,
+    "8884/tcp": 8884
    },
   "map": ["ssl", "share"],
   "options": {
     "plain": true,
+    "plain_websockets": false,
     "ssl": false,
+    "ssl_websockets": false,
     "anonymous": true,
     "logins": [],
     "customize": {
@@ -25,7 +29,9 @@
   },
   "schema": {
     "plain": "bool",
+    "plain_websockets": "bool",
     "ssl": "bool",
+    "ssl_websockets": "bool",
     "anonymous": "bool",
     "logins": [
         {"username": "str", "password": "str"}
