--- a/bluetooth_bcm43xx/config.json
+++ b/bluetooth_bcm43xx/config.json
@@ -1,8 +1,8 @@
 {
-  "name": "Bluetooth BCM43xx",
+  "name": "Bluetooth BCM43xx (ResinOS)",
   "version": "2.3",
   "slug": "bluetooth_bcm43xx",
-  "description": "Activate Bluetooth for Broadcom 43xx chips",
+  "description": "Activate Bluetooth for Broadcom 43xx chips for ResinOS",
   "url": "https://home-assistant.io/addons/bluetooth_bcm43xx/",
   "startup": "initialize",
   "boot": "auto",
