Update to configurator 0.3.1

--- a/configurator/Dockerfile
+++ b/configurator/Dockerfile
@@ -6,14 +6,14 @@ ENV LANG C.UTF-8
 
 # Setup base
 ARG CONFIGURATOR_VERSION
-RUN apk add --no-cache python3 git curl \
+RUN apk add --no-cache python3 git curl openssh \
   && pip3 install GitPython \
+  && pip3 install pyotp \
   && curl -s -o /configurator.py https://raw.githubusercontent.com/danielperna84/hass-configurator/$CONFIGURATOR_VERSION/configurator.py \
-  && sed -i "s/GIT = False/GIT = True/g" /configurator.py \
   && apk del curl
 
 # Copy data
-COPY map.py run.sh /
+COPY run.sh /
 RUN chmod a+x /run.sh
 
 CMD ["/run.sh"]
