--- a/configurator/config.json
+++ b/configurator/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Configurator",
-  "version": "0.4",
+  "version": "0.5",
   "slug": "configurator",
   "description": "Browser-based configuration file editor for Home Assistant.",
   "url": "https://home-assistant.io/addons/configurator",
@@ -15,30 +15,37 @@
   "options": {
     "username": "admin",
     "password": null,
+    "ssl": false,
     "certfile": "fullchain.pem",
     "keyfile": "privkey.pem",
-    "ssl": false,
+    "verify_hostname": false,
     "allowed_networks": ["192.168.0.0/16", "172.30.0.0/16"],
     "banned_ips": ["8.8.8.8"],
     "banlimit": 0,
     "ignore_pattern": ["__pycache__"],
     "dirsfirst": false,
-    "enforce_basepath": false
+    "enforce_basepath": false,
+    "notify_service": "persistent_notification.create",
+    "ignore_ssl": false
   },
   "schema": {
     "username": "str",
     "password": "match(.+)",
+    "ssl": "bool",
     "certfile": "str",
     "keyfile": "str",
-    "ssl": "bool",
+    "verify_hostname": "bool",
     "allowed_networks": ["str"],
     "banned_ips": ["str"],
     "banlimit": "int",
     "ignore_pattern": ["str"],
     "dirsfirst": "bool",
     "enforce_basepath": "bool",
+    "notify_service": "str",
+    "ignore_ssl": "bool",
     "sesame": "str?",
-    "verify_hostname": "str?"
+    "sesame_totp_secret": "str?",
+    "loglevel": "str?"
   },
   "image": "homeassistant/{arch}-addon-configurator"
 }
