--- a/configurator/Dockerfile
+++ b/configurator/Dockerfile
@@ -1,12 +1,9 @@
 ARG BUILD_FROM
 FROM $BUILD_FROM
 
-# Add env
-ENV LANG C.UTF-8
-
 # Setup base
 ARG CONFIGURATOR_VERSION
-RUN apk add --no-cache python3 git curl openssh \
+RUN apk add --no-cache git curl openssh \
   && pip3 install GitPython \
   && pip3 install pyotp \
   && curl -s -o /configurator.py https://raw.githubusercontent.com/danielperna84/hass-configurator/$CONFIGURATOR_VERSION/configurator.py \
