--- a/check_config/Dockerfile
+++ b/check_config/Dockerfile
@@ -1,11 +1,8 @@
 ARG BUILD_FROM
 FROM $BUILD_FROM
 
-# Add env
-ENV LANG C.UTF-8
-
 # Setup base
-RUN apk add --no-cache jq python3 build-base python3-dev libffi-dev openssl-dev \
+RUN apk add --no-cache jq gcc libffi-dev libressl-dev \
     && pip3 install --no-cache --upgrade pip
 
 # Copy data
