--- a/git_pull/config.json
+++ b/git_pull/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Git pull",
-  "version": "4.8",
+  "version": "4.9",
   "slug": "git_pull",
   "description": "Simple git pull to update the local configuration",
   "url": "https://home-assistant.io/addons/git_pull/",
@@ -16,6 +16,7 @@
     "git_branch": "master",
     "git_command": "pull",
     "git_remote": "origin",
+    "git_prune": false,
     "repository": null,
     "auto_restart": false,
     "repeat": {
@@ -31,6 +32,7 @@
     "git_branch": "str",
     "git_command": "match(pull|reset)",
     "git_remote": "str",
+    "git_prune": "bool",
     "repository": "match((?:.+):(\/\/)?(.*?)(\\.git)(\/?|\\#[-\\d\\w._]+?))",
     "auto_restart": "bool",
     "repeat": {
