Bugfix check config

--- a/check_config/Dockerfile
+++ b/check_config/Dockerfile
@@ -2,7 +2,9 @@ ARG BUILD_FROM
 FROM $BUILD_FROM
 
 # Setup base
-RUN apk add --no-cache jq gcc libffi-dev libressl-dev \
+RUN apk add --no-cache \
+        jq gcc \
+        libffi-dev libressl-dev musl-dev \
     && pip3 install --no-cache --upgrade pip
 
 # Copy data
