Map Hass.io backup and share folders (#408)
* Map additional Hass.io folders

Added backup and share to config.json

* Make ssl rw

* Update config.json

* Update CHANGELOG.md

* Update config.json

* Update config.json

* Update CHANGELOG.md

* Update CHANGELOG.md

* Update config.json

--- a/configurator/config.json
+++ b/configurator/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Configurator",
-  "version": "1.2",
+  "version": "2",
   "slug": "configurator",
   "description": "Browser-based configuration file editor for Home Assistant.",
   "url": "https://home-assistant.io/addons/configurator",
@@ -11,7 +11,12 @@
   "ports": {
     "3218/tcp": 3218
   },
-  "map": ["config:rw", "ssl"],
+  "map": [
+    "backup:rw",
+    "config:rw",
+    "share:rw",
+    "ssl:rw"
+  ],
   "options": {
     "username": "admin",
     "password": null,
