--- a/homematic/config.json
+++ b/homematic/config.json
@@ -12,7 +12,8 @@
   "apparmor": false,
   "ports": {
     "2001/tcp": 2001,
-    "2000/tcp": 2000
+    "2000/tcp": 2000,
+    "2010/tcp": 2010,
   },
   "options": {
     "rf_enable": true,
