--- a/samba/smb.conf
+++ b/samba/smb.conf
@@ -13,6 +13,39 @@
    interfaces = %%INTERFACE%%
    hosts allow = %%ALLOW_HOSTS%%
 
-   #guest account = root
-   #map to guest = Bad Password
-   #ntlm auth = yes
+   ntlm auth = yes
+
+[config]
+   browseable = yes
+   writeable = yes
+   path = /config
+   force user = root
+   force group = root
+
+[addons]
+   browseable = yes
+   writeable = yes
+   path = /addons
+   force user = root
+   force group = root
+
+[ssl]
+   browseable = yes
+   writeable = yes
+   path = /ssl
+   force user = root
+   force group = root
+
+[share]
+   browseable = yes
+   writeable = yes
+   path = /share
+   force user = root
+   force group = root
+
+[backup]
+   browseable = yes
+   writeable = yes
+   path = /share
+   force user = root
+   force group = root
