--- a/samba/Dockerfile
+++ b/samba/Dockerfile
@@ -5,7 +5,7 @@ FROM $BUILD_FROM
 ENV LANG C.UTF-8
 
 # Setup base
-RUN apk add --no-cache jq samba-server samba-common-tools
+RUN apk add --no-cache curl samba-server samba-common-tools
 
 # Copy data
 COPY run.sh /
