--- a/samba/Dockerfile
+++ b/samba/Dockerfile
@@ -5,11 +5,22 @@ FROM $BUILD_FROM
 ENV LANG C.UTF-8
 
 # Setup base
-RUN apk add --no-cache curl samba-server samba-common-tools
+ARG HASSIO_PAM_VERSION
+RUN apk add --no-cache \
+        musl libcurl linux-pam curl samba-server samba-common-tools \
+    && apk add --no-cache --virtual .build-dependencies \
+        musl-dev curl-dev linux-pam-dev gcc git make \
+    && git clone --depth 1 -b $HASSIO_PAM_VERSION https://github.com/home-assistant/hassio-auth-pam \
+    && cd hassio-auth-pam \
+    && make \
+    && cp -f pam_hassio.so /lib/security/ \
+    && apk del .build-dependencies \
+    && rm -r /usr/src/hassio-auth-pam
 
 # Copy data
 COPY run.sh /
 COPY smb.conf /etc/
+COPY samba.pam /etc/pam.d/samba
 
 RUN chmod a+x /run.sh
 
