--- a/samba/config.json
+++ b/samba/config.json
@@ -8,6 +8,7 @@
   "boot": "auto",
   "host_network": true,
   "map": ["config:rw", "ssl:rw", "addons:rw", "share:rw", "backup:rw"],
+  "auth_api": true,
   "options": {
     "workgroup": "WORKGROUP",
     "interface": "",
