--- a/samba/smb.conf
+++ b/samba/smb.conf
@@ -2,7 +2,10 @@
    netbios name = %%NAME%%
    workgroup = %%WORKGROUP%%
    server string = Samba HomeAssistant config share
-   security: user
+   #security: user
+   encrypt passwords = No
+   obey pam restrictions = Yes
+   passdb backend = tdbsam
 
    load printers = no
    disable spoolss = yes
