--- a/samba/smb.conf
+++ b/samba/smb.conf
@@ -2,10 +2,9 @@
    netbios name = %%NAME%%
    workgroup = %%WORKGROUP%%
    server string = Samba HomeAssistant config share
-   #security: user
-   encrypt passwords = No
-   obey pam restrictions = Yes
-   passdb backend = tdbsam
+   security: user
+   encrypt passwords = no
+   obey pam restrictions = yes
 
    load printers = no
    disable spoolss = yes
@@ -15,8 +14,6 @@
    bind interfaces only = yes
    interfaces = %%INTERFACE%%
    hosts allow = %%ALLOW_HOSTS%%
-
-   ntlm auth = yes
 
 [config]
    browseable = yes
