--- a/samba/smb.conf
+++ b/samba/smb.conf
@@ -2,7 +2,7 @@
    netbios name = %%NAME%%
    workgroup = %%WORKGROUP%%
    server string = Samba HomeAssistant config share
-   security: user
+   security = user
    encrypt passwords = no
    obey pam restrictions = yes
 
