--- a/samba/smb.conf
+++ b/samba/smb.conf
@@ -2,9 +2,11 @@
    netbios name = %%NAME%%
    workgroup = %%WORKGROUP%%
    server string = Samba HomeAssistant config share
+
    security = user
    encrypt passwords = no
    obey pam restrictions = yes
+   pam password change = no
 
    load printers = no
    disable spoolss = yes
