--- a/homematic/Dockerfile
+++ b/homematic/Dockerfile
@@ -6,7 +6,7 @@ RUN apt-get update \
     && apt-get install -y \
         curl \
         libusb-1.0 \
-        openjdk-11-jre \
+        openjdk-11-jre-headless \
     && rm -rf /var/lib/apt/lists/*
 
 ARG OCCU_VERSION
