--- a/homematic/Dockerfile
+++ b/homematic/Dockerfile
@@ -38,9 +38,9 @@ RUN curl -sL -o occu.tar.gz https://github.com/eq-3/occu/archive/${OCCU_VERSION}
     && ln -s /opt/hm/etc/config /etc/config \
     && cd ../ \
     && cp -r firmware /opt/hm/ \
-    && cp -R HMserver/opt/HmIP/* /opt/HmIP/ \
-    && cp -a HMServer/HMIPServer.jar /opt/HMServer/ \
     && cp -R HMserver/etc/* /opt/hm/etc/config/ \
+    && cp -R HMserver/opt/HmIP/* /opt/HmIP/ \
+    && cp -a HMServer/opt/HMServer/HMIPServer.jar /opt/HMServer/ \
     && cp -R HMserver/opt/HMServer/groups /opt/HMServer/ \
 	&& cp -R HMserver/opt/HMServer/measurement /opt/HMServer/ \
 	&& cp -R HMserver/opt/HMServer/pages /opt/HMServer/ \
