--- a/homematic/crRFD.conf
+++ b/homematic/crRFD.conf
@@ -1,13 +1,10 @@
-# USB HM/IP TRX Adapter Configuration
-Adapter.1.Type=HMIP_CCU2
-Adapter.1.Port=/dev/ttyS0
 
 Config.Dir=/etc/config/crRFD
 Config.Include=hmip_user.conf
 
 # Directory Configuration
-Persistence.Home=/etc/config/crRFD/data
-FirmwareUpdate.BG.OTAU.Home=/etc/config/firmware
+Persistence.Home=/data/crRFD
+FirmwareUpdate.BG.OTAU.Home=/opt/hm/firmware
 FirmwareUpdate.BG.OTAU.divergent.device.type.definition.file=/opt/HmIP/crrfd.fwfix
 
 # Legacy API Configuration
@@ -32,3 +29,5 @@ Legacy.Parameter.ReplaceEnumValueWithOrdinal=true
 KeyServer.Mode=KEYSERVER_LOCAL
 KeyServer.Gateway.URL=secgtw.homematic.com
 Vertx.WorkerPoolSize=5
+
+# USB HM/IP TRX Adapter Configuration
