Homematic IP support (#424)
* Update config.json

* Sync time of RF Daemon every 30min (#425)

* sync homematic time periodically

* Show "Run SetInterfaceClock" in log file

* signal handler added

* version incremented

* Update CHANGELOG.md

* Grammar fixes (#429)

* Update config.json

* Forward

* fix config

* small size

* fix copy

* fix path

* Debug

* Fix script

* fix settings

* fix path

* Update run.sh

--- a/homematic/Dockerfile
+++ b/homematic/Dockerfile
@@ -5,9 +5,8 @@ FROM $BUILD_FROM
 RUN apt-get update \
     && apt-get install -y \
         curl \
-        jq \
         libusb-1.0 \
-        tzdata \
+        openjdk-11-jre-headless \
     && rm -rf /var/lib/apt/lists/*
 
 ARG OCCU_VERSION
@@ -19,18 +18,37 @@ RUN curl -sL -o occu.tar.gz https://github.com/eq-3/occu/archive/${OCCU_VERSION}
     && tar xzpf occu.tar.gz \
     && rm -f occu.tar.gz \
     && cd occu-${OCCU_VERSION} \
-    && if [ "${BUILD_ARCH}" = "armhf" ]; then cd arm-gnueabihf; else cd X86_32_Debian_Wheezy; fi \
     && mkdir -p /opt/hm \
-    && cp -R packages-eQ-3/RFD/* /opt/hm \
-    && cp -R packages-eQ-3/LinuxBasis/* /opt/hm \
-    && cp -R packages-eQ-3/HS485D/* /opt/hm \
+    && mkdir -p /opt/hm/etc/config \
+    && mkdir -p /opt/HmIP \
+    && mkdir -p /opt/HMServer \
     && ln -s /opt/hm/etc/config /etc/config \
-    && cp -r ../firmware /opt/hm/ \
+    && if [ "${BUILD_ARCH}" = "armhf" ]; \
+        then \
+            cd arm-gnueabihf; \
+        else \
+            cd X86_32_Debian_Wheezy; \
+        fi \
+    && cp -R packages-eQ-3/RFD/bin /opt/hm/ \
+    && cp -R packages-eQ-3/RFD/lib /opt/hm/ \
+    && cp -R packages-eQ-3/RFD/opt/HmIP/* /opt/HmIP/ \
+    && cp -R packages-eQ-3/LinuxBasis/bin /opt/hm/ \
+    && cp -R packages-eQ-3/LinuxBasis/lib /opt/hm/ \
+    && cp -R packages-eQ-3/HS485D/bin /opt/hm/ \
+    && cp -R packages-eQ-3/HS485D/lib /opt/hm/ \
+    && cd ../ \
+    && cp -r firmware /opt/hm/ \
+    && cp -R HMserver/etc/config_templates/* /opt/hm/etc/config/ \
+    && cp -R HMserver/opt/HmIP/* /opt/HmIP/ \
+    && cp -a HMserver/opt/HMServer/HMIPServer.jar /opt/HMServer/ \
+    && cp -R HMserver/opt/HMServer/groups /opt/HMServer/ \
+	&& cp -R HMserver/opt/HMServer/measurement /opt/HMServer/ \
+	&& cp -R HMserver/opt/HMServer/pages /opt/HMServer/ \
     && rm -rf /usr/src/occu-${OCCU_VERSION}
 ENV HM_HOME=/opt/hm LD_LIBRARY_PATH=/opt/hm/lib:${LD_LIBRARY_PATH}
 
 # Update config files
-COPY rfd.conf hs485d.conf /etc/config/
+COPY rfd.conf hs485d.conf crRFD.conf /etc/config/
 
 # Setup start script
 COPY run.sh /
