--- a/homematic/config.json
+++ b/homematic/config.json
@@ -1,6 +1,6 @@
 {
   "name": "HomeMatic OCCU",
-  "version": "3",
+  "version": "4",
   "slug": "homematic",
   "description": "HomeMatic central based on OCCU",
   "url": "https://home-assistant.io/addons/homematic/",
@@ -12,7 +12,8 @@
   "apparmor": false,
   "ports": {
     "2001/tcp": 2001,
-    "2000/tcp": 2000
+    "2000/tcp": 2000,
+    "2010/tcp": 2010
   },
   "options": {
     "rf_enable": true,
@@ -29,6 +30,13 @@
         "serial": "xy",
         "key": "abc",
         "ip": "192.168.0.0"
+      }
+    ],
+    "hmip_enable": false,
+    "hmip": [
+      {
+        "type": "HMIP_CCU2",
+        "device": "/dev/ttyUSB0"
       }
     ]
   },
@@ -47,6 +55,13 @@
         "serial": "str",
         "key": "str",
         "ip": "str"
+      }
+    ],
+    "hmip_enable": "bool",
+    "hmip": [
+      {
+        "type": "match(HMIP_CCU2)",
+        "device": "match(^/dev/.*$)"
       }
     ]
   },
