--- a/samba/smb.conf
+++ b/samba/smb.conf
@@ -4,9 +4,7 @@
    server string = Samba HomeAssistant config share
 
    security = user
-   encrypt passwords = no
-   obey pam restrictions = yes
-   pam password change = no
+   ntlm auth = yes
 
    load printers = no
    disable spoolss = yes
