--- a/samba/config.json
+++ b/samba/config.json
@@ -17,12 +17,18 @@
         "10.0.0.0/8",
         "172.16.0.0/12",
         "192.168.0.0/16"
-    ]
+    ],
+    "ssl": false,
+    "certfile": "fullchain.pem",
+    "keyfile": "privkey.pem"
   },
   "schema": {
     "workgroup": "str",
     "interface": "str",
-    "allow_hosts": ["str"]
+    "allow_hosts": ["str"],
+    "ssl": "bool",
+    "certfile": "str",
+    "keyfile": "str"
   },
   "image": "homeassistant/{arch}-addon-samba"
 }
