--- a/samba/smb.conf
+++ b/samba/smb.conf
@@ -5,6 +5,7 @@
 
    security = user
    ntlm auth = yes
+   passdb backend = tdbsam:/data/passdb.tdb
 
    load printers = no
    disable spoolss = yes
