--- a/samba/smb.conf
+++ b/samba/smb.conf
@@ -5,7 +5,6 @@
 
    security = user
    ntlm auth = yes
-   passdb backend = tdbsam:/data/passdb.tdb
 
    load printers = no
    disable spoolss = yes
@@ -20,6 +19,8 @@
    browseable = yes
    writeable = yes
    path = /config
+
+   valid users = %%USERNAME%%
    force user = root
    force group = root
 
@@ -27,6 +28,8 @@
    browseable = yes
    writeable = yes
    path = /addons
+
+   valid users = %%USERNAME%%
    force user = root
    force group = root
 
@@ -34,6 +37,8 @@
    browseable = yes
    writeable = yes
    path = /ssl
+
+   valid users = %%USERNAME%%
    force user = root
    force group = root
 
@@ -41,6 +46,8 @@
    browseable = yes
    writeable = yes
    path = /share
+
+   valid users = %%USERNAME%%
    force user = root
    force group = root
 
@@ -48,5 +55,7 @@
    browseable = yes
    writeable = yes
    path = /share
+
+   valid users = %%USERNAME%%
    force user = root
    force group = root
