--- a/samba/config.json
+++ b/samba/config.json
@@ -23,6 +23,7 @@
   "schema": {
     "workgroup": "str",
     "username": "str",
+    "password": "str",
     "interface": "str",
     "allow_hosts": ["str"]
   },
