--- a/mosquitto/mosquitto.conf
+++ b/mosquitto/mosquitto.conf
@@ -14,6 +14,7 @@ persistence_location /data/
 
 ##
 # User settings
+auth_plugin /usr/share/mosquitto/auth-plug.so
 auth_opt_backends http
 auth_opt_http_ip 127.0.0.1
 auth_opt_http_port 8080
