--- a/mosquitto/mosquitto.conf
+++ b/mosquitto/mosquitto.conf
@@ -22,6 +22,8 @@ auth_opt_http_getuser_uri /login
 auth_opt_http_superuser_uri /superuser
 auth_opt_http_aclcheck_uri /acl
 
+allow_anonymous %%ANONYMOUS%%
+
 #include_dir /share/mosquitto
 
 listener 1883
