Update to new mqtt generation

--- a/mosquitto/config.json
+++ b/mosquitto/config.json
@@ -1,25 +1,24 @@
 {
   "name": "Mosquitto broker",
-  "version": "2.0",
+  "version": "3",
   "slug": "mosquitto",
   "description": "An Open Source MQTT broker",
   "url": "https://home-assistant.io/addons/mosquitto/",
   "startup": "system",
   "boot": "auto",
+  "map": ["ssl", "share"],
+  "discovery": ["mqtt"],
+  "services": ["mqtt:provide"],
+  "auth_api": true,
   "ports": {
     "1883/tcp": 1883,
     "1884/tcp": 1884,
     "8883/tcp": 8883,
     "8884/tcp": 8884
    },
-  "map": ["ssl", "share"],
   "options": {
-    "plain": true,
-    "plain_websockets": false,
-    "ssl": false,
-    "ssl_websockets": false,
-    "anonymous": true,
     "logins": [],
+    "anonymous": false,
     "customize": {
       "active": false,
       "folder": "mosquitto"
@@ -28,14 +27,10 @@
     "keyfile": "privkey.pem"
   },
   "schema": {
-    "plain": "bool",
-    "plain_websockets": "bool",
-    "ssl": "bool",
-    "ssl_websockets": "bool",
-    "anonymous": "bool",
     "logins": [
         {"username": "str", "password": "str"}
     ],
+    "anonymous": "bool",
     "customize": {
       "active": "bool",
       "folder": "str"
