--- a/mosquitto/mosquitto.conf
+++ b/mosquitto/mosquitto.conf
@@ -14,6 +14,22 @@ persistence_location /data/
 
 ##
 # User settings
-#password_file /data/users.db
-#allow_anonymous false
+auth_plugin /usr/share/mosquitto/auth-plug.so
+auth_opt_backends http
+auth_opt_http_ip 127.0.0.1
+auth_opt_http_port 8080
+auth_opt_http_getuser_uri /login
+auth_opt_http_superuser_uri /superuser
+auth_opt_http_aclcheck_uri /acl
+
+allow_anonymous %%ANONYMOUS%%
+
 #include_dir /share/mosquitto
+
+listener 1883
+protocol mqtt
+
+listener 1884
+protocol websockets
+
+# Follow SSL listener if a certificate exists
