Fix snips package handling

--- a/snips/Dockerfile
+++ b/snips/Dockerfile
@@ -9,7 +9,8 @@ COPY customtts.sh /usr/bin
 RUN chmod a+x /run.sh \
     && chmod a+x /usr/bin/customtts.sh \
     && apt-get update \
-    && (apt-get install -y mpg123 curl snips-asr-injection; exit 0) \
+    && apt-get install -y mpg123 curl \
+    && apt-get install -y snips-asr-injection || true \
     && apt-get clean all \
     && curl -L -o /assistant_Hass_de.zip https://s3.amazonaws.com/hassio-addons-data/assistant_Hass_de.zip \
     && curl -L -o /assistant_Hass_en.zip https://s3.amazonaws.com/hassio-addons-data/assistant_Hass_en.zip \
