--- a/snips/Dockerfile
+++ b/snips/Dockerfile
@@ -7,13 +7,12 @@ COPY mosquitto.conf /etc/
 COPY customtts.sh /usr/bin
 
 RUN chmod a+x /run.sh \
-    && chmod a+x /usr/bin/customtts.sh \
-    && apt-get update \
-    && apt-get install -y mpg123 curl \
-    && apt-get install -y snips-asr-injection || true \
-    && apt-get clean all \
     && curl -L -o /assistant_Hass_de.zip https://s3.amazonaws.com/hassio-addons-data/assistant_Hass_de.zip \
     && curl -L -o /assistant_Hass_en.zip https://s3.amazonaws.com/hassio-addons-data/assistant_Hass_en.zip \
-    && curl -L -o /assistant_Hass_fr.zip https://s3.amazonaws.com/hassio-addons-data/assistant_Hass_fr.zip
+    && curl -L -o /assistant_Hass_fr.zip https://s3.amazonaws.com/hassio-addons-data/assistant_Hass_fr.zip \
+    && chmod a+x /usr/bin/customtts.sh \
+    && apt-get update \
+    && apt-get install -y mpg123 curl tzdata snips-asr-injection || true \
+    && apt-get clean all
 
 ENTRYPOINT [ "/run.sh" ]
