Snips with new service API (#444)
* Snips with new service API

* Update Dockerfile

* Update run.sh

* Update config.json

* Update run.sh

* Update customtts.sh

* Update customtts.sh

* Update customtts.sh

* Update run.sh

--- a/snips/config.json
+++ b/snips/config.json
@@ -1,27 +1,18 @@
 {
   "name": "Snips.AI",
-  "version": "3.3",
+  "version": "4",
   "slug": "snips",
   "description": "Local voice control platform",
   "url": "https://home-assistant.io/addons/snips/",
   "startup": "application",
   "boot": "auto",
   "arch": ["armhf", "amd64"],
-  "ports": {
-    "1883/tcp": 9898
-  },
   "map": ["share"],
   "tmpfs": "size=10m",
   "audio": true,
+  "services": ["mqtt:need"],
   "homeassistant_api": true,
   "options": {
-    "mqtt_bridge": {
-      "active": true,
-      "host": "core-mosquitto",
-      "port": 1883,
-      "user": "",
-      "password": ""
-    },
     "assistant": "assistant.zip",
     "language": "en",
     "custom_tts": {
@@ -30,13 +21,6 @@
     }
   },
   "schema": {
-    "mqtt_bridge": {
-      "active": "bool",
-      "host": "str",
-      "port": "port",
-      "user": "str",
-      "password": "str"
-    },
     "assistant": "str",
     "language": "match(en|de|fr)",
     "custom_tts": {
