--- a/homematic/rfd.conf
+++ b/homematic/rfd.conf
@@ -5,10 +5,10 @@ Log Destination = None
 
 Persist Keys = 1
 
-Device Description Dir = /opt/hm/firmware/rftypes
+Device Description Dir = /firmware/rftypes
 Device Files Dir = /data/rfd
 Key File = /data/keys
 Address File = /data/ids
-Firmware Dir = /opt/hm/firmware
-User Firmware Dir = /data/firmware
-Replacemap File = /opt/hm/firmware/rftypes/replaceMap/rfReplaceMap.xml
+Firmware Dir = /firmware
+User Firmware Dir = /share/hm-firmware
+Replacemap File = /firmware/rftypes/replaceMap/rfReplaceMap.xml
