--- a/homematic/hs485d.conf
+++ b/homematic/hs485d.conf
@@ -5,7 +5,7 @@ Log Destination = None
 
 Persist Keys = 1
 
-Device Description Dir = /opt/hm/firmware/hs485types
+Device Description Dir = /firmware/hs485types
 Device Files Dir = /data/hs485d
-Firmware Dir = /opt/hm/firmware
-User Firmware Dir = /data/firmware
+Firmware Dir = /firmware
+User Firmware Dir = /share/hm-firmware
