--- a/homematic/crRFD.conf
+++ b/homematic/crRFD.conf
@@ -1,10 +1,10 @@
 
 Config.Dir=/data/crRFD
-Config.Include=hmip_user.conf
+#Config.Include=hmip_user.conf
 
 # Directory Configuration
 Persistence.Home=/data/crRFD
-FirmwareUpdate.BG.OTAU.Home=/opt/hm/firmware
+FirmwareUpdate.BG.OTAU.Home=/firmware
 FirmwareUpdate.BG.OTAU.divergent.device.type.definition.file=/opt/HmIP/crrfd.fwfix
 
 # Legacy API Configuration
