--- a/homematic/Dockerfile
+++ b/homematic/Dockerfile
@@ -14,9 +14,7 @@ ARG BUILD_ARCH
 
 # Install OCCU
 WORKDIR /usr/src
-RUN curl -sL -o occu.tar.gz https://github.com/eq-3/occu/archive/${OCCU_VERSION}.tar.gz \
-    && tar xzpf occu.tar.gz \
-    && rm -f occu.tar.gz \
+RUN curl -SL https://github.com/eq-3/occu/archive/${OCCU_VERSION}.tar.gz | tar xzf - \
     && cd occu-${OCCU_VERSION} \
     && mkdir -p /opt/hm \
     && mkdir -p /opt/hm/etc/config \
@@ -37,7 +35,7 @@ RUN curl -sL -o occu.tar.gz https://github.com/eq-3/occu/archive/${OCCU_VERSION}
     && cp -R packages-eQ-3/HS485D/bin /opt/hm/ \
     && cp -R packages-eQ-3/HS485D/lib /opt/hm/ \
     && cd ../ \
-    && cp -r firmware /opt/hm/ \
+    && cp -r firmware / \
     && cp -R HMserver/etc/config_templates/* /opt/hm/etc/config/ \
     && cp -R HMserver/opt/HmIP/* /opt/HmIP/ \
     && cp -a HMserver/opt/HMServer/HMIPServer.jar /opt/HMServer/ \
@@ -52,6 +50,7 @@ COPY rfd.conf hs485d.conf crRFD.conf /etc/config/
 
 # Setup start script
 COPY run.sh /
+COPY hm-firmware.sh /usr/lib/
 RUN chmod a+x /run.sh
 
 WORKDIR /data
