--- a/homematic/crRFD.conf
+++ b/homematic/crRFD.conf
@@ -4,7 +4,7 @@ Config.Dir=/data/crRFD
 
 # Directory Configuration
 Persistence.Home=/data/crRFD
-FirmwareUpdate.BG.OTAU.Home=/firmware
+FirmwareUpdate.BG.OTAU.Home=/share/hmip-firmware
 FirmwareUpdate.BG.OTAU.divergent.device.type.definition.file=/opt/HmIP/crrfd.fwfix
 
 # Legacy API Configuration
