--- a/homematic/config.json
+++ b/homematic/config.json
@@ -17,7 +17,7 @@
     "2010/tcp": 2010
   },
   "options": {
-    "rf_enable": true,
+    "rf_enable": false,
     "rf": [
       {
         "type": "CCU2",
