Support for firmware update homematic (#452)
* Support for firmware update homematic

* Update run.sh

* Update run.sh

* Update rfd.conf

* Update hs485d.conf

* Update run.sh

* Update crRFD.conf

* Update Dockerfile

* Update Dockerfile

* Create hm-firmware.sh

* Update config.json

* Update build.json

* Update build.json

* Update run.sh

* Update crRFD.conf

* Update hm-firmware.sh

* Update run.sh

* Update hm-firmware.sh

* Update CHANGELOG.md

* Update Dockerfile

* Update hm-firmware.sh

* Update CHANGELOG.md

* Update hm-firmware.sh

* Update config.json

* Update CHANGELOG.md

--- a/homematic/Dockerfile
+++ b/homematic/Dockerfile
@@ -14,14 +14,14 @@ ARG BUILD_ARCH
 
 # Install OCCU
 WORKDIR /usr/src
-RUN curl -sL -o occu.tar.gz https://github.com/eq-3/occu/archive/${OCCU_VERSION}.tar.gz \
-    && tar xzpf occu.tar.gz \
-    && rm -f occu.tar.gz \
+RUN curl -SL https://github.com/eq-3/occu/archive/${OCCU_VERSION}.tar.gz | tar xzf - \
     && cd occu-${OCCU_VERSION} \
     && mkdir -p /opt/hm \
     && mkdir -p /opt/hm/etc/config \
     && mkdir -p /opt/HmIP \
     && mkdir -p /opt/HMServer \
+    && mkdir -p /boot \
+    && echo "VERSION=${OCCU_VERSION}" > /boot/VERSION \
     && ln -s /opt/hm/etc/config /etc/config \
     && if [ "${BUILD_ARCH}" = "armhf" ]; \
         then \
@@ -37,7 +37,8 @@ RUN curl -sL -o occu.tar.gz https://github.com/eq-3/occu/archive/${OCCU_VERSION}
     && cp -R packages-eQ-3/HS485D/bin /opt/hm/ \
     && cp -R packages-eQ-3/HS485D/lib /opt/hm/ \
     && cd ../ \
-    && cp -r firmware /opt/hm/ \
+    && cp -r firmware / \
+    && mv /firmware/HmIP-RFUSB/hmip_coprocessor_update.eq3 /firmware/HmIP-RFUSB/hmip_coprocessor_update-2.8.6.eq3 \
     && cp -R HMserver/etc/config_templates/* /opt/hm/etc/config/ \
     && cp -R HMserver/opt/HmIP/* /opt/HmIP/ \
     && cp -a HMserver/opt/HMServer/HMIPServer.jar /opt/HMServer/ \
@@ -52,6 +53,7 @@ COPY rfd.conf hs485d.conf crRFD.conf /etc/config/
 
 # Setup start script
 COPY run.sh /
+COPY hm-firmware.sh /usr/lib/
 RUN chmod a+x /run.sh
 
 WORKDIR /data
