Support the changes in specific files without restarting home assistant
Support the changes in specific files without restarting home assistant.  Files such as the lovelace config can be picked up without a restart of the service, decreasing impact of changes.

--- a/git_pull/config.json
+++ b/git_pull/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Git pull",
-  "version": "5",
+  "version": "5.0.1",
   "slug": "git_pull",
   "description": "Simple git pull to update the local configuration",
   "url": "https://home-assistant.io/addons/git_pull/",
@@ -20,6 +20,10 @@
     "git_prune": false,
     "repository": null,
     "auto_restart": false,
+    "restart_ignore": [
+      "ui-lovelace.yaml",
+      ".gitignore"
+    ],
     "repeat": {
       "active": false,
       "interval": 300
@@ -36,6 +40,7 @@
     "git_prune": "bool",
     "repository": "match((?:.+):(\/\/)?(.*?)(\\.git)(\/?|\\#[-\\d\\w._]+?))",
     "auto_restart": "bool",
+    "restart_ignore": ["str"],
     "repeat": {
       "active": "bool",
       "interval": "int"
