--- a/homematic/Dockerfile
+++ b/homematic/Dockerfile
@@ -20,6 +20,7 @@ RUN curl -SL https://github.com/eq-3/occu/archive/${OCCU_VERSION}.tar.gz | tar x
     && mkdir -p /opt/hm/etc/config \
     && mkdir -p /opt/HmIP \
     && mkdir -p /opt/HMServer \
+    && mkdir -p /var/status \
     && mkdir -p /boot \
     && echo "VERSION=${OCCU_VERSION}" > /boot/VERSION \
     && ln -s /opt/hm/etc/config /etc/config \
@@ -39,17 +40,16 @@ RUN curl -SL https://github.com/eq-3/occu/archive/${OCCU_VERSION}.tar.gz | tar x
     && cd ../ \
     && cp -r firmware / \
     && mv /firmware/HmIP-RFUSB/hmip_coprocessor_update.eq3 /firmware/HmIP-RFUSB/hmip_coprocessor_update-2.8.6.eq3 \
-    && cp -R HMserver/etc/config_templates/* /opt/hm/etc/config/ \
     && cp -R HMserver/opt/HmIP/* /opt/HmIP/ \
     && cp -a HMserver/opt/HMServer/HMIPServer.jar /opt/HMServer/ \
     && cp -R HMserver/opt/HMServer/groups /opt/HMServer/ \
-	&& cp -R HMserver/opt/HMServer/measurement /opt/HMServer/ \
-	&& cp -R HMserver/opt/HMServer/pages /opt/HMServer/ \
+    && cp -R HMserver/opt/HMServer/measurement /opt/HMServer/ \
+    && cp -R HMserver/opt/HMServer/pages /opt/HMServer/ \
     && rm -rf /usr/src/occu-${OCCU_VERSION}
 ENV HM_HOME=/opt/hm LD_LIBRARY_PATH=/opt/hm/lib:${LD_LIBRARY_PATH}
 
 # Update config files
-COPY rfd.conf hs485d.conf crRFD.conf /etc/config/
+COPY rfd.conf hs485d.conf crRFD.conf log4j.xml /etc/config/
 
 # Setup start script
 COPY run.sh /
