--- a/configurator/Dockerfile
+++ b/configurator/Dockerfile
@@ -3,7 +3,8 @@ FROM $BUILD_FROM
 
 # Setup base
 ARG CONFIGURATOR_VERSION
-RUN apk add --no-cache git curl openssh \
+RUN apk add --no-cache \
+      git curl openssh nginx nginx-mod-http-lua \
   && pip3 install --no-cache-dir GitPython pyotp \
   && curl -s -o /configurator.py https://raw.githubusercontent.com/danielperna84/hass-configurator/$CONFIGURATOR_VERSION/configurator.py \
   && apk del curl
