--- a/configurator/config.json
+++ b/configurator/config.json
@@ -18,36 +18,21 @@
     "ssl:rw"
   ],
   "options": {
-    "username": "admin",
-    "password": null,
     "ssl": false,
     "certfile": "fullchain.pem",
     "keyfile": "privkey.pem",
-    "allowed_networks": ["192.168.0.0/16", "172.30.0.0/16"],
-    "banned_ips": ["8.8.8.8"],
-    "banlimit": 0,
     "ignore_pattern": ["__pycache__"],
     "dirsfirst": false,
-    "enforce_basepath": false,
-    "notify_service": "persistent_notification.create"
+    "enforce_basepath": false
   },
   "schema": {
-    "username": "str",
-    "password": "match(.+)",
     "ssl": "bool",
     "certfile": "str",
     "keyfile": "str",
-    "allowed_networks": ["str"],
-    "banned_ips": ["str"],
-    "banlimit": "int",
     "ignore_pattern": ["str"],
     "dirsfirst": "bool",
     "enforce_basepath": "bool",
-    "notify_service": "str",
-    "sesame": "str?",
-    "sesame_totp_secret": "str?",
-    "loglevel": "str?",
-    "verify_hostname": "str?"
+    "loglevel": "str?"
   },
   "image": "homeassistant/{arch}-addon-configurator"
 }
